# Tsicket

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
Tsicket-uniapp/: App.vue  app.css  list.txt  main.js  manifest.json  pages.json
Tsicket-uniapp/colorui/: main.css
Tsicket-uniapp/components/: activity-check.vue  activity-mini-card.vue  activity-prepare.vue  follow-list.vue  message.vue
Tsicket-uniapp/pages/activity/: activity.vue
Tsicket-uniapp/pages/discover/: disover.vue
Tsicket-uniapp/pages/following/: following.vue
Tsicket-uniapp/pages/history/: history.vue
Tsicket-uniapp/pages/index/: index.vue
Tsicket-uniapp/pages/like/: like.vue
Tsicket-uniapp/pages/search/: search.vue
Tsicket-uniapp/pages/sponsor/: sponsor.vue
Tsicket-uniapp/pages/user/: user.vue
admin_frontend/: package-lock.json  package.json  vue.config.js
admin_frontend/src/: App.vue  main.js
admin_frontend/src/components/: AddEvent.vue  AddMoment.vue  AddNotice.vue  AdminEvent.vue  AdminLogIn.vue  AdminMenu.vue  ChangeEvent.vue  ChangeInfo.vue  EventInfo.vue  EventList.vue  Help.vue  LogIn.vue  Register.vue
admin_frontend/src/router/: index.js
admin_frontend/src/store/: index.js
app/: Cargo.toml  README.md
app/src/: db_api.rs  main.rs
backend/: .env  Cargo.toml  Dockerfile
backend/Tsicket-uniapp/: manifest.json
backend/Tsicket-uniapp/pages/activity/: activity.vue
backend/Tsicket-uniapp/pages/user/: user.vue
backend/app/: Cargo.toml  README.md
backend/db/: README.md
backend/db/src/: Tsicket.sql
backend/src/: main.rs
backend/src/app/: admins.rs  events.rs  init.rs  mod.rs  sponsors.rs  update.rs  users.rs
backend/src/db/: Tsicket.sql  admins.rs  clear.sql  events.rs  mod.rs  moment.rs  notification.rs  records.rs  sponsors.rs  temp.sql  users.rs
backend/src/models/: users.rs
backend/src/utils/: auth.rs  error.rs  mod.rs
backend/utils/: Cargo.toml  README.md
backend/utils/src/: lib.rs
db/: Cargo.toml  README.md
db/src/: Tsicket.sql
new/: package.json
new/src/: App.vue  main.js
new/src/components/: EventInfo.vue  EventList.vue  HelloWorld.vue  Help.vue  LogIn.vue  Register.vue
new/src/router/: index.js
src/: main.rs
utils/: Cargo.toml  README.md
utils/src/: error.rs
