[package]
name = "tsicket"
version = "0.1.0"
authors = ["zhou <fliingelephant@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
actix-cors = "0.1.0"
actix-service = "0.4.2"
actix-http = "*"
actix-identity = "*"
blob-uuid = "0.3.0"
dotenv = "0.14.1"
failure = "0.1.5"
futures = "0.1.25"
http = "0.1.16"
lazy_static = "1.3.0"
log = "0.4.6"
md5 = "*"
mysql = "*"
rand = "0.7.2"
regex = "1.1.6"
reqwest = "0.9.22"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
slug = "0.1.4"
time = "*"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"
