[package]
name = "tsicket_utils"
version = "0.1.0"
authors = ["zhou <fliingelephant@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
chrono = "0.4.7"
failure = ""
juniper = "0.14.0"                                      # GraphQL
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"